syntax = "proto3";

package spark_ssp;

option go_package = "github.com/lightsparkdev/spark/proto/spark_ssp";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "spark.proto";

service SparkSspInternalService {
    rpc query_lost_nodes(QueryLostNodesRequest) returns (QueryLostNodesResponse) {}
}

message QueryLostNodesRequest {
    bytes owner_identity_pubkey = 1;
}

message QueryLostNodesResponse {
    repeated spark.TreeNode nodes = 1;
}